fix line wrapping

--- a/src/components/code/_code_block.scss
+++ b/src/components/code/_code_block.scss
@@ -45,6 +45,7 @@
   }
 
   .euiCodeBlock__line__number {
+    position: absolute;
     user-select: none;
 
     &:before {
